# Jobber

./: .gitignore  Makefile  README.rst  output.html  pyproject.toml  requirements_dev.txt
configs/: hotkeys_config.json  job_app_selectors.json  recent.json
resources/: Jackie_Ling_Resume.html
resources/inputs/resume_data/: jackie_ling_data.json
resources/inputs/templates/: default_resume_template.html
resources/outputs/: output.html  output_backup.html
src/jobber/: __init__.py  file_handler.py  hotkey_listener.py  job_post_scraper.py  jobber_cli.py  main.py  pdf_exporter.py  pdf_writer.py  resume_tailor.py  resume_writer.py  timing.py
tests/: test_jobber.py  test_resume_tailor.py
