[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jobber"
version = "0.1.0"
description = "A program to help partially automate and manage job applications."
readme = "README.rst"
authors = [
  {name = "Jackie Ling", email = "jackielinggggg@gmail.com"}
]
maintainers = [
  {name = "Jackie Ling", email = "jackielinggggg@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/ling_jackie/jobber/issues"
changelog = "https://github.com/ling_jackie/jobber/blob/master/changelog.md"
homepage = "https://github.com/ling_jackie/jobber"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.setuptools.packages.find]
where = ["src"]



# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

